# yf

./: .gitignore  README.md  beta.ipynb  marketcaps.ipynb  pyproject.toml
yf/: appl-dji-msft.py  appl-dji.py  appl.py  beta.py  oblique_entropy.py  var.py  yf.py
