[tool.poetry]
name = "yf"
version = "0.1.0"
description = ""
authors = ["easai <aksarih@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"
yfinance = "^0.2.66"
matplotlib = "^3.10.6"
jupyter = "^1.1.1"
inflect = "^7.5.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
